--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,10 +30,31 @@ jobs:
       - name: Run Playwright tests
         run: npx playwright test
         
+      - name: Check report directory
+        run: |
+          ls -la
+          if [ -d "playwright-report" ]; then
+            echo "Report directory exists"
+            ls -la playwright-report/
+          else
+            echo "Report directory does not exist"
+            mkdir -p playwright-report
+            echo "Empty report directory created for artifact upload"
+            echo "No tests were executed" > playwright-report/index.html
+          fi
+        
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
+          retention-days: 30
+          
+      - name: Upload test artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: test-results/
           retention-days: 30
